<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wasabi</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Suivant</string>
    <string name="previous">Précédent</string>
    <string name="fresco">Fresque</string>
    <string name="notif">Notif</string>
    <string name="close">Fermer</string>
    <string name="draw">dessiner</string>
    <string name="picture">Image</string>
    <string name="sound">Son</string>
    <string name="message_fresco">Envoyez un message à votre proche mystère</string>
    <string name="cancel_last_draw">Annuler dessin</string>
    <string name="record_instructions">Maintenez votre doigt sur\nle bouton rouge pour enregistrer</string>
    <string name="error_play_sound">Une erreur s\'est produite lors de la lecture</string>
    <string name="image">Image</string>
    <string name="delete">Supprimer</string>
    <string name="animation">Animation</string>
    <string name="logo">Logo</string>
    <string name="form_code_instructions">Rentrez le code présent sur la brochure ou lors de votre inscription :</string>
    <string name="your_code"><i>Votre code</i></string>
    <string name="validate">VALIDER</string>
    <string name="unexpected_text">L\'inattendu peut survenir n\'importe où et n\'importe quand</string>
    <string name="fun_image">L\'image super rigolote</string>
    <string name="challenge">Relevez notre défi !</string>
    <string name="challenge_infos">Rendez-vous au Blue Elephant à côté de Bastille en moins d\'1h.</string>
    <string name="address_lafayette">43/45 rue de la Roquette - 75 011 Paris</string>
    <string name="see_map">Voir le plan</string>
    <string name="quick">Vite !</string>
    <string name="time_remaining">Il ne vous reste plus que :</string>
    <string name="follow_arrow">Suivez la direction indiquée par la flèche</string>
    <string name="lets_guide">Laissez-vous guidez</string>
    <string name="meter">m</string>
    <string name="gps_distance">parcourus</string>
    <string name="gps_distance_left">restants</string>
    <string name="initial_distance">0</string>
    <string name="invit_facebook">Vous êtes invité à un événement !</string>
    <string name="error">Une erreur s\'est produite :(</string>
    <string name="minutes">min</string>
    <string name="seconds">sec</string>
    <string name="go_to_last_fragment">Go to last fragment</string>
    <string name="panda">Et le panda il fait quoi ?</string>
    <string name="sing_to_discover">Chantez pour découvrir le prochain indice : l\'expression préférée de votre proche mystère</string>
    <string name="message_mask">Masque du message</string>
    <string name="experience_ending">Votre expérience touche à sa fin !</string>
    <string name="revelation">Révélation</string>
    <string name="in_7_days">Dans 7 jours, vous recevrez un défi. A la clé : la rencontre de votre proche mystère !</string>
    <string name="consignes">Consignes :</string>
    <string name="get_ready">Tenez-vous prêt chez vous,</string>
    <string name="date_final_event">Jeudi 18 juin à 18h</string>
    <string name="dress_code">Dress code : Explorateur</string>
    <string name="address_communicated">Nous vous communiquerons l’adresse le moment venu !</string>
    <string name="can_go_with_someone">Vous pouvez venir accompagné</string>
    <string name="accept">Accepter</string>
    <string name="accept_invitation">Accepter\nl\'invitation</string>
    <string name="chose_other_date">Choisir une\nautre date</string>
    <string name="accomplice_meeting">Vous allez enfin rencontrer votre proche mystère !\n</string>
    <string name="destination">Vous êtes arrivé à destination</string>
    <string name="bravo">Bravo !</string>
    <string name="take_picture_to_illustrate">Prenez une photo pour illustrer votre expérience et débloquer un indice !</string>
    <string name="custom_image">Custom image</string>
    <string name="border">Bordure</string>
    <string name="pattern">Motif</string>
    <string name="mystery_present">Voici un cadeau de votre proche mystère</string>
    <string name="draw_complice">Dessinez votre proche mystère\ntel que vous l’imaginez</string>
    <string name="deguise_toi">Pour recevoir un indice sur son identité :\nDéguisez-vous avec les éléments dessinés et prenez-vous en photo.</string>
    <string name="hello_antoine">Bonjour Antoine !</string>
    <string name="chose_adventure">Vous avez choisi de tenter l’aventure, merci !</string>
    <string name="lets_guide2">A présent,\nlaissez-vous guider…</string>
    <string name="accomplice_border">Contour du mec</string>
    <string name="respect_repers">Respectez les repères\nautant que possible.</string>
    <string name="give_surname">Donnez un surnom à votre\nproche mystère</string>
    <string name="enter_surname"><i>Entrez un surnom</i></string>
    <string name="complice">Complice</string>
    <string name="gps_indice">Merci ! Voici un indice concernant l\'identité de</string>
    <string name="quote">Quote</string>
    <string name="prefered_artist">Mon artiste préféré\nest Banksy</string>
    <string name="revelation_rang">L\'heure de la révélation a sonné !</string>
    <string name="guess_identity">Avez-vous deviné l\'identité\nde</string>
    <string name="no_idea">AUCUNE IDÉE !</string>
    <string name="full_name"><i>Prénom Nom</i></string>
    <string name="experience_over">Vous êtes arrivé au terme de votre expérience.</string>
    <string name="challenge_arrived">Le défi révélation est arrivé !\nVous allez rencontrer\nvotre proche mystère.</string>
    <string name="giving_address">Nous allons vous communiquer l\'adresse</string>
    <string name="ready">PRÊT</string>
    <string name="are_you_ready">Êtes-vous prêt à relever notre défi ?</string>
    <string name="your_mystery_friend_is">Votre proche mystère est bien <b>Sébastien</b> !</string>
    <string name="friend_envelop">Il va vous remettre une enveloppe, permettant d\'accéder à notre ultime surprise.</string>
    <string name="great_adventure">Nous espérons que cette aventure vous a plu !</string>
    <string name="see_you_soon">A bientôt ;)</string>
    <string name="wasabi_team">L’équipe Wasabi</string>
    <string name="last_is_batman">Le dernier déguisement porté par votre proche mystère est batman !</string>
    <string name="text_tuto_1">En cliquant ici, vous accédez à une fresque de communication. Elle vous permet d’interagir avec votre proche mystère.</string>
    <string name="text_tuto_2">Utilisez les outils disponibles ici. Ils se débloquent au fil de l’expérience.</string>
    <string name="text_tuto_3">La surface disponible par jour est limitée. Vous pouvez visionner les jours précédants, mais vous ne pouvez pas les modifier.</string>
    <string name="text_tuto_4">Vous savez tout ! Commencez par saluer votre proche mystère sur la fresque de communication !</string>

</resources>
