<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <project.gobelins.wasabi.views.TextViewQuicksand
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/experience_ending"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/drop_shadow"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/revelation"
            android:src="@drawable/revelation"/>

    </FrameLayout>

    <project.gobelins.wasabi.views.TextViewQuicksand
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="Êtes-vous prêt à relever notre défi ?"
        android:textColor="@color/black"
        android:textSize="17sp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/border_blue"
            android:orientation="vertical"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp">

            <project.gobelins.wasabi.views.TextViewQuicksand
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/date_final_event"
                android:textAllCaps="true"
                android:textColor="@color/active_show"
                android:textSize="25sp"/>

            <project.gobelins.wasabi.views.TextViewQuicksand
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/dress_code"
                android:textColor="@color/black"
                android:textSize="17sp"
                app:font_style="italic"/>

            <project.gobelins.wasabi.views.TextViewQuicksand
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/giving_address"
                android:textColor="@color/black"
                android:textSize="17sp"/>

        </LinearLayout>

        <project.gobelins.wasabi.views.TextViewQuicksand
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:background="@color/white"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/consignes"
            android:textColor="@color/active_show"
            android:textSize="20sp"/>

    </FrameLayout>

    <project.gobelins.wasabi.views.ButtonQuicksand
        android:id="@+id/ready"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginStart="60dp"
        android:background="@color/active_show"
        android:text="@string/ready"
        android:textColor="@color/white"
        android:textSize="16sp"/>

</LinearLayout>
