<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
             tools:context=".Wasabi">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <project.gobelins.wasabi.views.TextViewQuicksand
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="14dp"
            android:gravity="center"
            android:text="@string/sing_to_discover"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/drop_shadow"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/message_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/panda"
            android:src="@drawable/message_sung"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/message_mask"
            android:src="@drawable/message_mask"/>

    </FrameLayout>

</FrameLayout>
