<?xml version="1.0" encoding="utf-8"?>
<project.gobelins.wasabi.views.AccompliceDrawed xmlns:android="http://schemas.android.com/apk/res/android"
                                                android:layout_width="match_parent"
                                                android:layout_height="match_parent"
                                                android:background="@color/white"
                                                android:orientation="vertical">

    <project.gobelins.wasabi.views.TextViewQuicksand
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/give_surname"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/drop_shadow"/>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="284dp"
            android:layout_gravity="center"
            android:background="@drawable/accomplice_background"
            android:contentDescription="@string/accomplice_border"/>

        <project.gobelins.wasabi.fresco.drawing.DrawedView
            android:id="@+id/drawed_view"
            android:layout_width="200dp"
            android:layout_height="315dp"
            android:layout_gravity="center"/>

    </FrameLayout>

    <project.gobelins.wasabi.views.EditTextQuicksand
        android:id="@+id/surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginStart="60dp"
        android:background="@color/active_hide"
        android:hint="@string/enter_surname"
        android:maxLength="25"
        android:textColor="@color/active_show"
        android:textColorHint="@color/active_show"
        android:textSize="20sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="45dp"
        android:layout_marginEnd="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginStart="60dp"
        android:background="@color/active_show"/>

    <project.gobelins.wasabi.views.ButtonQuicksand
        android:id="@+id/validate_surname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginStart="60dp"
        android:background="@color/active_show"
        android:text="@string/validate"
        android:textColor="@color/white"
        android:textSize="16sp"/>

</project.gobelins.wasabi.views.AccompliceDrawed>