<?xml version="1.0" encoding="utf-8"?>

<io.codetail.widget.RevealFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible">

    <!-- Conteneur -->
    <project.gobelins.wasabi.fresco.Fresco
        android:id="@+id/fresco_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="project.gobelins.wasabi.fresco.Fresco">

        <!-- Le viewPager -->
        <project.gobelins.wasabi.fresco.views.FrescoViewPager
            android:id="@+id/view_pager_fresco"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/fresco_background"/>

        <!-- Les boutons d'action -->
        <LinearLayout
            android:id="@+id/fresco_buttons_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end|top"
            android:orientation="vertical"
            android:weightSum="1">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <!-- Annuler le dernier dessin -->
                <project.gobelins.wasabi.fresco.views.buttons.CancelButton
                    android:id="@+id/cancel_last_draw"
                    android:layout_width="30dp"
                    android:layout_height="25dp"
                    android:layout_gravity="start|center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/cancel_last_draw"
                    android:src="@drawable/cancel_last_draw"
                    android:visibility="invisible"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center">

                    <!-- Les boutons de couleur -->
                    <project.gobelins.wasabi.fresco.views.ColorsView
                        android:id="@+id/colors_buttons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal"
                        android:visibility="invisible"/>

                    <project.gobelins.wasabi.fresco.views.buttons.DrawButton
                        android:id="@+id/begin_drawing"
                        android:layout_width="@dimen/fresco_tools"
                        android:layout_height="@dimen/fresco_tools"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:contentDescription="@string/draw"
                        android:background="@drawable/round_stroke_button"
                        android:src="@drawable/tool_pencil"/>

                </LinearLayout>

            </FrameLayout>

            <!-- Enregistrer du son -->
            <project.gobelins.wasabi.fresco.views.buttons.RecordButton
                android:id="@+id/record_audio"
                android:layout_width="@dimen/fresco_tools"
                android:layout_height="@dimen/fresco_tools"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:contentDescription="@string/sound"
                android:src="@drawable/tool_record"/>

            <!-- Prendre une photo -->
            <project.gobelins.wasabi.fresco.views.buttons.PictureButton
                android:id="@+id/take_picture"
                android:layout_width="@dimen/fresco_tools"
                android:layout_height="@dimen/fresco_tools"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:contentDescription="@string/picture"
                android:src="@drawable/tool_picture"/>

        </LinearLayout>

        <!-- Le bouton fermer -->
        <ImageView
            android:id="@+id/close_fresco"
            android:layout_width="@dimen/action_buttons"
            android:layout_height="@dimen/action_buttons"
            android:layout_gravity="start|bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/close"
            android:src="@drawable/back_arrow"/>

    </project.gobelins.wasabi.fresco.Fresco>

</io.codetail.widget.RevealFrameLayout>